# strkit

./: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test-calls.txt
.github/workflows/: publish-docker.yml  release.yml  test.yml
catalogs/: pathogenic_assoc.hg38.tsv
docs/: caller_catalog.md  caller_usage.md  convert_trf_to_bed.md  output_formats.md  ploidy_configuration.md  remote_viz.md  trio_analyses.md
strkit/: VERSION  __init__.py  constants.py  entry.py  exceptions.py  iupac.py  json.py  logger.py  ploidy.py  utils.py  vcf_utils.py
strkit/aligned/: lengths.py
strkit/call/: __init__.py  align_matrix.py  allele.py  call_locus.py  call_sample.py  caller.py  cigar.py  consensus.py  constants.py  gmm.py  loci.py  non_daemonic_pool.py  params.py  re_caller.py  realign.py  repeat_count_params.py  repeathmm.py  repeats.py  snvs.py  straglr.py  tandem_genotypes.py  types.py  utils.py  validation.py
strkit/catalog/: combine.py
strkit/cohort/: make.py
strkit/convert/: _bed_4.py  constants.py  converter.py  expansionhunter.py  gangstr.py  hipstr.py  tandem_genotypes.py  trf.py  trgt.py
strkit/merge/: merge_vcfs.py
strkit/mi/: base.py  expansionhunter.py  gangstr.py  generic_vcf.py  intervals.py  longtr.py  repeathmm.py  result.py  (+5 more)
strkit_viz/: package-lock.json  package.json  webpack.config.js
stronger/: constants.py  entry.py  utils.py
tests/: test_caller_loci_fns.py  test_caller_locus_validation.py  test_caller_utils.py  test_convert.py  test_iupac.py  test_mi_intervals.py  test_ploidy.py  test_utils.py
(+60 files in other folders)
