[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strkit"
version = "0.25.0a4"
dependencies = [
    "Flask>=3.1,<3.2",
    "orjson>=3.11.1,<4",
    "pysam>=0.19,<0.25",
    "numpy>=2.1.3,<3",
    "parasail>=1.2.4,<1.4",
    "pydantic>=2.11.7,<3",
    "scikit-learn>=1.7.2,<2",
    "scipy>=1.10,<1.17",
    "statsmodels>=0.14.0,<0.15",
    "strkit_rust_ext==0.28.0",
]
requires-python = ">=3.10"

keywords = ["tandem repeats", "TRs", "short tandem repeats", "STRs", "genomics"]
description = "A toolkit for analyzing variation in short(ish) tandem repeats."
readme = "README.md"

license = "GPL-3.0-only"
license-files = ["LICEN[CS]E", "LICEN[CS]E.*"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

authors = [{name = "David Lougheed", email = "david.lougheed@gmail.com"}]

[project.urls]
Homepage = "https://github.com/davidlougheed/strkit"
Repository = "https://github.com/davidlougheed/strkit.git"

[project.scripts]
strkit = "strkit.entry:main"

[tool.hatch.build]
exclude = [".github", ".idea", "catalogs", "docs", "tests", "requirements.txt", "Dockerfile"]
